# LodGen

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  clear.sh  cmake_install.cmake  rebuild.sh
LodGen/inc/: core.h
LodGenerator/: CMakeLists.txt  Makefile  cmake_install.cmake
LodGenerator/inc/: LodGenerator.h  core.h  core_config.h  errors.h  global.h  lod_func.h  lod_math.h  mesh.h
LodGenerator/inc/algorithms/: algorithms.h  basic_alg.h  qem_alg.h  vertex_cluster.h
LodGenerator/inc/gpu_math/: gpu_core.h  gpu_test.h  kernel_code.h
LodGenerator/inc/math/: lod_math.h
LodGenerator/src/: core.cpp  core_config.cpp  lod_math.cpp  mesh.cpp
LodGenerator/src/algorithms/: basic_alg.cpp  qem_alg.cpp  vertex_cluster.cpp
LodGenerator/src/gpu_math/: gpu_core.cpp  gpu_test.cpp
LodGenerator/src/math/: lod_math.cpp
LodTerminal/: CMakeLists.txt  Makefile  cmake_install.cmake
LodTerminal/inc/: global.h  terminal.h  timer.h
LodTerminal/src/: main.cpp  terminal.cpp  timer.cpp
docs/: example.json  info.md  org.md  roadmap_ru.md  vertex_cluster.md
